# Copyright (C) 2012
# Martin Lambers <martin.lambers@uni-siegen.de>
#
# Copying and distribution of this file, with or without modification, are
# permitted in any medium without royalty provided the copyright notice and this
# notice are preserved. This file is offered as-is, without any warranty.

man_MANS = ecmview.1

info_TEXINFOS = ecmview.texi

IMAGES = 

ecmview_TEXINFOS = ecmview.texi $(IMAGES)

AM_MAKEINFOHTMLFLAGS = --no-split

dist_html_DATA = ecmview.html $(IMAGES)

EXTRA_DIST = $(man_MANS)
