# Copyright (C) 2011, 2012
# Martin Lambers <marlam@marlam.de>
#
# Copying and distribution of this file, with or without modification, are
# permitted in any medium without royalty provided the copyright notice and this
# notice are preserved. This file is offered as-is, without any warranty.

noinst_LTLIBRARIES = libbase.la
libbase_la_SOURCES = \
	str.h str.cpp \
	msg.h msg.cpp \
	fio.h fio.cpp \
	dbg.h dbg.cpp \
	exc.h exc.cpp \
	intcheck.h \
	opt.h opt.cpp \
	timer.h timer.cpp \
	s11n.h s11n.cpp \
	blob.h \
	thread.h thread.cpp \
	compiler.h \
        sys.h sys.cpp \
	lru-cache.h \
	gettext.h
