# Copyright (C) 2011, 2012
# Martin Lambers <marlam@marlam.de>
#
# Copying and distribution of this file, with or without modification, are
# permitted in any medium without royalty provided the copyright notice and this
# notice are preserved. This file is offered as-is, without any warranty.

noinst_LTLIBRARIES = libdownload.la
libdownload_la_CPPFLAGS = -I$(top_srcdir)/src/base $(libcurl_CFLAGS)
libdownload_la_SOURCES = download.h download.cpp
