# Copyright (C) 2011, 2012
# Martin Lambers <marlam@marlam.de>
#
# Copying and distribution of this file, with or without modification, are
# permitted in any medium without royalty provided the copyright notice and this
# notice are preserved. This file is offered as-is, without any warranty.

EXTRA_DIST = README COPYING \
	ecmview_logo.svgz ecmview_logo.png ecmview_logo.ico

# see ../ecmview/Makefile.am for the use of these logo files.
