# Copyright (C) 2011, 2012
# Martin Lambers <marlam@marlam.de>
#
# Copying and distribution of this file, with or without modification, are
# permitted in any medium without royalty provided the copyright notice and this
# notice are preserved. This file is offered as-is, without any warranty.

noinst_LTLIBRARIES = libxgl.la
libxgl_la_CPPFLAGS = -I$(top_srcdir)/src/base $(libglew_CFLAGS) $(libgta_CFLAGS)
libxgl_la_SOURCES = xgl.h xgl.cpp xgl-gta.h xgl-gta.cpp
